--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <nav class="nav">
       <ul>
-        <li><a href="https://www.linkedin.com/in/gabedev/">fale comigo</a></li>
+        <li><a href="https://www.linkedin.com/in/gabedev/" target="_blank">fale comigo</a></li>
       </ul>
     </nav>
   </header>
