total refactor to fix responsive

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
   <header class="header">
-    <div class="switcher">
-      <div class="switch-white"><a href="#"></a></div>
-      <div class="switch-black"><a href=""></a></div>
+    <div class="switch">
+      <div class=""><a href="#"></a></div>
+      <div class="switch-on"><a href=""></a></div>
     </div>
 
     <nav class="nav">
@@ -21,14 +21,16 @@
       </ul>
     </nav>
   </header>
+
+  <div class="line"></div>
   
   <main class="main">
-    <div class="main-line"></div>
-    <div>
+
+    <div class="container-content">
       <h1>Olá.</h1>
       <h1>Me chamo Gabriel.</h1>
     </div>
-    <div>
+    <div class="container-content">
       <h2>UX Designer.</h2>
       <h2>Front End Developer.</h2>
     </div>
