--- a/index.html
+++ b/index.html
@@ -10,31 +10,37 @@
 </head>
 <body>
   <header class="header">
-    <div class="switch">
-      <div class=""><a href="#"></a></div>
-      <div class="switch-on"><a href=""></a></div>
-    </div>
+    <div><a href="#"><img src="assets/logo.svg" alt="Logo"></a></div>
 
     <nav class="nav">
       <ul>
-        <li><a href="https://www.linkedin.com/in/gabedev/" target="_blank">fale comigo</a></li>
+        <li><a href="#" target="_blank"><img src="assets/github.svg" alt="Github"></a></li>
+        <li><a href="#" target="_blank"><img src="assets/linkedin.svg" alt="LinkedIn"></a></li>
       </ul>
     </nav>
   </header>
-
-  <div class="line"></div>
   
   <main class="main">
+    <h1>Olá</h1>
+    <h1>Me chamo Gabriel.</h1>
+    <h2>Desenvolvedor Front End</h2>
+    <h2>UX/UI Designer</h2>
 
-    <div class="container-content">
-      <h1>Olá.</h1>
-      <h1>Me chamo Gabriel.</h1>
-    </div>
-    <div class="container-content">
-      <h2>UX Designer.</h2>
-      <h2>Front End Developer.</h2>
-    </div>
+    <div class="call-to-action"><a href="https://www.linkedin.com/in/gabedev/" target="_blank">Vamos conversar? -></a></div>
   </main>
+
+  <div class="line"></div>
+
+  <section class="about">
+    <p>Sou um pequeno padawan na tecnologia</p>
+    <span>Ainda não possuo experiência, mas...</span>
+    <p>A cada dia busco me tornar melhor.</p>
+    <span>Porque eu acredito que talento não existe</span>
+    <p>e que podemos conquistar qualquer coisa</p>
+    <span>com esforço, disciplina e propósitos.</span>
+
+    <blockquote class="quote">“A situação perfeita não existe, você tem que criar ela.”</blockquote>
+  </section>
   
 </body>
 </html>
