fixing broken links

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <nav class="nav">
       <ul>
-        <li><a href="#" target="_blank"><img src="assets/github.svg" alt="Github"></a></li>
-        <li><a href="#" target="_blank"><img src="assets/linkedin.svg" alt="LinkedIn"></a></li>
+        <li><a href="https://github.com/phedrakeson" target="_blank"><img src="assets/github.svg" alt="Github"></a></li>
+        <li><a href="https://www.linkedin.com/in/gabedev/" target="_blank"><img src="assets/linkedin.svg" alt="LinkedIn"></a></li>
       </ul>
     </nav>
   </header>
