fixing broken links

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <h2>Desenvolvedor Front End</h2>
     <h2>UX/UI Designer</h2>
 
-    <div class="call-to-action"><a href="https://www.linkedin.com/in/gabedev/" target="_blank">Vamos conversar? -></a></div>
+    <div class="call-to-action"><a href="mailto:gabrield.developer@gmail.com" target="_blank">Vamos conversar? -></a></div>
   </main>
 
   <div class="line"></div>
