fixing alignment mistakes

--- a/index.html
+++ b/index.html
@@ -34,13 +34,11 @@
 
   <section class="about">
     <p>Sou um pequeno padawan na tecnologia</p>
-    <span>Ainda não possuo experiência, mas...</span>
+    <p>Ainda não possuo <span>experiência</span>, mas...</p>
     <p>A cada dia busco me tornar melhor.</p>
-    <span>Porque eu acredito que talento não existe</span>
+    <p>Porque eu acredito que <span>talento</span> não existe</p>
     <p>e que podemos conquistar qualquer coisa</p>
-    <span>com esforço, disciplina e propósitos.</span>
-
-    <blockquote class="quote">“A situação perfeita não existe, você tem que criar ela.”</blockquote>
+    <p>com <span>esforço, disciplina e propósitos.</span></p>
   </section>
   
 </body>
