--- a/index.html
+++ b/index.html
@@ -40,6 +40,17 @@
     <p>e que podemos conquistar qualquer coisa</p>
     <p>com <span>esforço, disciplina e propósitos.</span></p>
   </section>
+
+  <section id="items-wrapper">
+    <div id="items">
+      <div class="item"><img src="assets/placeholder.jpg" alt="teste"></div>
+      <div class="item"><img src="assets/placeholder2.jpg" alt="teste"></div>
+      <div class="item"><img src="assets/placeholder3.jpg" alt="teste"></div>
+      <div class="item"><img src="assets/placeholder4.jpg" alt="teste"></div>
+      <div class="item"><img src="assets/placeholder5.jpg" alt="teste"></div>
+    </div>
+  </section>
   
+  <script src="scripts/carousel.js"></script>
 </body>
 </html>
