carrousel project button

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
   </section>
 
   <section id="items-wrapper">
+    <h1>Projetos que eu amo</h1>
     <div id="items">
       <div class="item"><img src="assets/placeholder.jpg" alt="teste"></div>
       <div class="item"><img src="assets/placeholder2.jpg" alt="teste"></div>
@@ -49,6 +50,7 @@
       <div class="item"><img src="assets/placeholder4.jpg" alt="teste"></div>
       <div class="item"><img src="assets/placeholder5.jpg" alt="teste"></div>
     </div>
+    <a href="#" target="_blank">Confira -></a>
   </section>
   
   <script src="scripts/carousel.js"></script>
