--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </section>
 
   <section id="items-wrapper">
-    <h1>Projetos que eu amo</h1>
+    <h1>Projetos que eu amo (em construção)</h1>
     <div id="items">
       <div class="item"><img src="assets/placeholder.jpg" alt="teste"></div>
       <div class="item"><img src="assets/placeholder2.jpg" alt="teste"></div>
