--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="gabedev | Front End Developer & UX/UI Designer" />
+  <meta property="og:description" content="Meu portfólio pessoal, aqui conto um pouco mais sobre mim.">
+  <meta property="og:image" content="assets/metapreview.png" />
+  <meta property="og:type" content="website" />
   <link rel="shortcut icon" href="assets/logo.svg">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/style.css">
-  <title>gabedev.</title>
+  <title>gabedev | Front End Developer & UX/UI Designer</title>
 </head>
 <body>
   <header class="header">
