fixing meta tag

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:title" content="gabedev | Front End Developer & UX/UI Designer" />
   <meta property="og:description" content="Meu portfólio pessoal, aqui conto um pouco mais sobre mim.">
-  <meta property="og:image" content="https://i.gyazo.com/e25f19974d5bd2392c9de1bc71772711.png" />
+  <meta property="og:image" content="https://gabedev.netlify.app/assets/metapreview.png" />
   <meta property="og:type" content="website" />
   <link rel="shortcut icon" href="assets/logo.svg">
   <link rel="preconnect" href="https://fonts.gstatic.com">
