adicionando os projetos ao carousel

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <h2>Desenvolvedor Front End</h2>
     <h2>UX/UI Designer</h2>
 
-    <div class="call-to-action"><a href="mailto:gabrield.developer@gmail.com" target="_blank">Vamos conversar? -></a></div>
+    <div class="call-to-action"><a href="https://api.whatsapp.com/send?phone=5551989507407" target="_blank">Vamos conversar? -></a></div>
   </main>
 
   <div class="line"></div>
@@ -46,16 +46,19 @@
   </section>
 
   <section id="items-wrapper">
-    <h1>Projetos que eu amo (em construção)</h1>
+    <h1>Projetos que eu amo</h1>
     <div id="items">
-      <div class="item"><img src="assets/placeholder.jpg" alt="teste"></div>
-      <div class="item"><img src="assets/placeholder2.jpg" alt="teste"></div>
-      <div class="item"><img src="assets/placeholder3.jpg" alt="teste"></div>
-      <div class="item"><img src="assets/placeholder4.jpg" alt="teste"></div>
-      <div class="item"><img src="assets/placeholder5.jpg" alt="teste"></div>
+      <div class="item"><img src="assets/bikcraft.jfif" alt="Bikcraft"></div>
+      <div class="item"><img src="assets/animaisfantasticos.gif" alt="Animais Fantásticos"></div>
+      <div class="item"><img src="assets/sorteador.gif" alt="Webapp Sorteador de Números"></div>
+      <div class="item"><img src="assets/30diascss2.gif" alt="Desafio 30 dias de CSS"></div>
+      <div class="item"><img src="assets/dailyuichallenge.gif" alt="DailyUI Challenge"></div>
+      <div class="item"><img src="assets/30diascss3.gif" alt="Desafio 30 dias de CSS"></div>
+      <div class="item"><img src="assets/30diascss.gif" alt="Dia 03 30 Dias de CSS"></div>
     </div>
-    <a href="#" target="_blank">Confira -></a>
+    <a href="https://github.com/phedrakeson" target="_blank">Confira -></a>
   </section>
+
   
   <script src="scripts/carousel.js"></script>
 </body>
