--- a/index.html
+++ b/index.html
@@ -45,21 +45,33 @@
     <p>com <span>esforço, disciplina e propósitos.</span></p>
   </section>
 
-  <section id="items-wrapper">
-    <h1>Projetos que eu amo</h1>
-    <div id="items">
-      <div class="item"><img src="assets/bikcraft.jfif" alt="Bikcraft"></div>
-      <div class="item"><img src="assets/animaisfantasticos.gif" alt="Animais Fantásticos"></div>
-      <div class="item"><img src="assets/sorteador.gif" alt="Webapp Sorteador de Números"></div>
-      <div class="item"><img src="assets/30diascss2.gif" alt="Desafio 30 dias de CSS"></div>
-      <div class="item"><img src="assets/dailyuichallenge.gif" alt="DailyUI Challenge"></div>
-      <div class="item"><img src="assets/30diascss3.gif" alt="Desafio 30 dias de CSS"></div>
-      <div class="item"><img src="assets/30diascss.gif" alt="Dia 03 30 Dias de CSS"></div>
+  <section id="projects">
+    <ul class="custom-control">
+      <li><img src="assets/slide/foto1-thumb.jpg" alt=""></li>
+      <li><img src="assets/slide/foto2-thumb.jpg" alt=""></li>
+      <li><img src="assets/slide/foto3-thumb.jpg" alt=""></li>
+      <li><img src="assets/slide/foto4-thumb.jpg" alt=""></li>
+      <li><img src="assets/slide/foto5-thumb.jpg" alt=""></li>
+      <li><img src="assets/slide/foto6-thumb.jpg" alt=""></li>
+    </ul>
+    <div class="wrapper">
+      <ul class="slide">
+        <li><img src="assets/slide/foto1.jpg" alt=""></li>
+        <li><img src="assets/slide/foto2.jpg" alt=""></li>
+        <li><img src="assets/slide/foto3.jpg" alt=""></li>
+        <li><img src="assets/slide/foto4.jpg" alt=""></li>
+        <li><img src="assets/slide/foto5.jpg" alt=""></li>
+        <li><img src="assets/slide/foto6.jpg" alt=""></li>
+      </ul>
     </div>
-    <a href="https://github.com/phedrakeson" target="_blank">Confira -></a>
+
+    <div class="arrow-nav">
+      <button class="prev"></button>
+      <button class="next"></button>
+    </div>
   </section>
 
   
-  <script src="scripts/carousel.js"></script>
+  <script type="module" src="scripts/main.js"></script>
 </body>
 </html>
